Updated as per comments

--- a/slider/slider-component/SliderComponent.html
+++ b/slider/slider-component/SliderComponent.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html>
-<head>
+
+  <head>
     <title>Slider</title>
     <link rel="stylesheet" href="./SliderComponent.css">
-</head>
-<body>
+  </head>
+
+  <body>
     <div class="container">
-        <div id="labelcontainer">
-           
+      <div id="labelcontainer"></div>
+      <div id="trackercontainer">
+        <div class="trackline">
+          <button id="slider-button">
+            -
+          </button>
         </div>
-        <div id="trackercontainer">
-          <div class="trackline">
-            <button id="slider-button">
-                -
-            </button>
-          </div>
-        </div>
+      </div>
     </div>
     <script src="./SliderCompnent.js"></script>
-</body>
+  </body>
+
 </html>
